--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100vh; width: 100vw; margin: 0">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height: 100%; position: relative;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
