--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100vh; width: 100vw; margin: 0">
+<html lang="en" style="height: 100%; width: 100%; margin: 0">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>study-ar-js-vite</title>
   </head>
-  <body style="margin: 0; overflow: hidden">
-    <div id="root" style="width: 100%; height: 100%; position: relative;"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <body
+    id="root"
+    style="height: 100%; width: 100%; margin: 0; overflow: hidden"
+  ></body>
+  <script type="module" src="/src/main.tsx"></script>
 </html>
