--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100vh; width: 100vw; margin: 0">
+<html lang="en" style="height: 100%; width: 100%; margin: 0">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/study-ar-js-vite/assets/favicon.17e50649.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/study-ar-js-vite/assets/index.3b9a10bc.js"></script>
+    <title>study-ar-js-vite</title>
+    <script type="module" crossorigin src="/study-ar-js-vite/assets/index.b19be45f.js"></script>
     <link rel="modulepreload" href="/study-ar-js-vite/assets/vendor.caea673a.js">
     <link rel="stylesheet" href="/study-ar-js-vite/assets/index.458f9883.css">
   </head>
-  <body style="margin: 0; overflow: hidden">
-    <div id="root" style="width: 100%; height: 100%; position: relative;"></div>
-    
-  </body>
+  <body
+    id="root"
+    style="height: 100%; width: 100%; margin: 0; overflow: hidden"
+  ></body>
+  
 </html>
